<resources>
    <string name="app_name">Pay2Share</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome!</string>
    <string name="nav_header_subtitle">Shall we pay?</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">My Groups</string>
    <string name="menu_gallery">My Debts</string>
    <string name="menu_slideshow">Contacts</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="add_contact">Add Contact</string>
    <string name="contact_exists">This contact already exists</string>
    <string name="cannot_add_own_email">You cannot add your own email as a contact</string>
    <string name="contact_added">Contact added</string>
    <string name="enter_email">Please enter an email</string>
    <string name="email_registered">This email is already registered</string>
    <string name="registered_successfully">Registered successfully</string>
    <string name="enter_group_name">Enter the group name</string>
    <string name="create_group">Create Group</string>
    <string name="change_language">Change Language</string>
    <string name="name">Name</string>
    <string name="delete_contact">Delete</string>
    <string name="total_debt">Total Debt: $0.00</string>
    <string name="settle_accounts">Time to settle accounts!</string>
    <string name="participants_group">Participants</string>
    <string name="addUser">Add user</string>
    <string name="addExpense">Add Expense</string>
    <string name="summary">Go to summary</string>
    <string name="expenseDescription">Expense description</string>
    <string name="moneySpent">Money Spent</string>
    <string name="addedExpenses">Added expenses</string>
    <string name="payment_message">%1$s has to pay $%2$s to %3$s</string>

</resources>